Added context menu, made draggableResizable composable and added text boxes

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -20,6 +20,7 @@
   "Dark": "Dark",
   "DisplayLegend": "Display legend",
   "DocumentationURL": "https://eccc-msc.github.io/open-data/msc-animet/readme_en/",
+  "ElementsOutOfFrame": "Legends and text boxes must be placed inside the frame to appear in the output animation.",
   "EPSG3857": "Web Mercator",
   "EPSG3978": "Lambert Conic Conformal",
   "EPSG3995": "Arctic Polar Stereo",
@@ -82,7 +83,6 @@
   "OtherProperties": "Properties",
   "OutputFormat": "Output format",
   "Portrait": "Portrait",
-  "ReplaceLegends": "Legends must be placed inside the frame to appear in the output animation.",
   "ResetRotation": "Reset rotation",
   "RevertColor": "Revert to original color",
   "RevertTimeZone": "Revert to your browser's time zone",
