--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -20,6 +20,7 @@
   "Dark": "Sombre",
   "DisplayLegend": "Afficher la légende",
   "DocumentationURL": "https://eccc-msc.github.io/open-data/msc-animet/readme_fr/",
+  "ElementsOutOfFrame": "Les légendes et boites de texte doivent être placées dans le cadre pour apparaitre dans l'animation.",
   "EPSG3857": "Web Mercator",
   "EPSG3978": "Lambert Conique Conforme",
   "EPSG3995": "Arctique Polaire Stéréo",
@@ -82,7 +83,6 @@
   "OtherProperties": "Propriétés",
   "OutputFormat": "Format de sortie",
   "Portrait": "Portrait",
-  "ReplaceLegends": "Les légendes doivent être placées dans le cadre pour apparaitre dans l'animation.",
   "ResetRotation": "Réinitialiser la rotation",
   "RevertColor": "Remettre la couleur originale",
   "RevertTimeZone": "Remettre le fuseau de votre navigateur",
