Fixed textbox and added vector arrow

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -1,4 +1,6 @@
 {
+  "AddArrow": "Arrow",
+  "AddTextbox": "Textbox",
   "AnimationFrom": "Weather animation from",
   "AppBarCreate": "Animation configuration",
   "AppBarExport": "Created animation",
