--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -1,4 +1,6 @@
 {
+  "AddArrow": "Flèche",
+  "AddTextbox": "Boite de texte",
   "AnimationFrom": "Animation météo de",
   "AppBarCreate": "Configuration",
   "AppBarExport": "Animation créée",
