Added circle and rectangle as well as moved all the code inside its own file

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -1,5 +1,7 @@
 {
   "AddArrow": "Arrow",
+  "AddBox": "Rectangle",
+  "AddCircle": "Circle",
   "AddTextbox": "Textbox",
   "AnimationFrom": "Weather animation from",
   "AppBarCreate": "Animation configuration",
