--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -2,6 +2,7 @@
   "AddArrow": "Flèche",
   "AddBox": "Rectangle",
   "AddCircle": "Cercle",
+  "AddPolygon": "Polygone",
   "AddTextbox": "Boite de texte",
   "AnimationFrom": "Animation météo de",
   "AppBarCreate": "Configuration",
