Added presets first draft and AniMet now supports comma sparated intervals

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -88,6 +88,7 @@
   "OtherProperties": "Properties",
   "OutputFormat": "Output format",
   "Portrait": "Portrait",
+  "Presets": "Presets",
   "ResetRotation": "Reset rotation",
   "RevertColor": "Revert to original color",
   "RevertTimeZone": "Revert to your browser's time zone",
