--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -88,6 +88,7 @@
   "OtherProperties": "Propriétés",
   "OutputFormat": "Format de sortie",
   "Portrait": "Portrait",
+  "Presets": "Pré-construites",
   "ResetRotation": "Réinitialiser la rotation",
   "RevertColor": "Remettre la couleur originale",
   "RevertTimeZone": "Remettre le fuseau de votre navigateur",
