Added simplified coundaries basemap and servicescarto WMS source

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -79,6 +79,7 @@
   "MP4ExportTitle": "Visualize & export",
   "MSCAnimet": "MSC AniMet",
   "MSCAnimetEmail": "Weather animation made with MSC AniMet",
+  "NaturalEarth": "Simplified boundaries",
   "NoBasemap": "No basemap",
   "NoData": "No data available here",
   "NotFound": "404 Not Found",
