--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -79,6 +79,7 @@
   "MP4ExportTitle": "Visualiser et exporter",
   "MSCAnimet": "AniMet du SMC",
   "MSCAnimetEmail": "Animation météo créée à partir d'AniMet du SMC",
+  "NaturalEarth": "Frontières simplifiées",
   "NoBasemap": "Aucun fond",
   "NoData": "Aucune donnée disponible ici",
   "NotFound": "Erreur 404",
