--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -79,15 +79,16 @@
   "MP4ExportTitle": "Visualize & export",
   "MSCAnimet": "MSC AniMet",
   "MSCAnimetEmail": "Weather animation made with MSC AniMet",
-  "NaturalEarth": "Simplified boundaries",
   "NoBasemap": "No basemap",
   "NoData": "No data available here",
   "NotFound": "404 Not Found",
   "NotFoundSub": "The page you are looking for does not exist.",
   "NoTimeTooltip": "Layer has no temporal dimension",
   "NRCan": "Natural Resources Canada",
+  "OSM": "OpenStreetMap",
   "OtherProperties": "Properties",
   "OutputFormat": "Output format",
+  "Overlay": "Overlays",
   "Portrait": "Portrait",
   "Presets": "Presets",
   "ResetRotation": "Reset rotation",
@@ -101,6 +102,7 @@
   "ServiceRestored": "Service restored, resuming...",
   "Share": "Share",
   "ShowGraticules": "Show graticules",
+  "Simplified": "Simplified boundaries",
   "SnapLayerToExtent": "Apply temporal extent and interval to animation.",
   "SnappedLayer": "Temporal extent and interval currently applied to animation.",
   "SocialWeatherHashtags": "weather,opendata",
