--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -79,15 +79,16 @@
   "MP4ExportTitle": "Visualiser et exporter",
   "MSCAnimet": "AniMet du SMC",
   "MSCAnimetEmail": "Animation météo créée à partir d'AniMet du SMC",
-  "NaturalEarth": "Frontières simplifiées",
   "NoBasemap": "Aucun fond",
   "NoData": "Aucune donnée disponible ici",
   "NotFound": "Erreur 404",
   "NotFoundSub": "La page que vous recherchez est introuvable.",
   "NoTimeTooltip": "La couche ne possède pas de dimension temporelle",
   "NRCan": "Ressources naturelles Canada",
+  "OSM": "OpenStreetMap",
   "OtherProperties": "Propriétés",
   "OutputFormat": "Format de sortie",
+  "Overlay": "Superpositions",
   "Portrait": "Portrait",
   "Presets": "Pré-construites",
   "ResetRotation": "Réinitialiser la rotation",
@@ -101,6 +102,7 @@
   "ServiceRestored": "Service rétabli, reprise...",
   "Share": "Partager",
   "ShowGraticules": "Montrer les graticules",
+  "Simplified": "Frontières simplifiées",
   "SnapLayerToExtent": "Appliquer l'étendue temporelle et l'intervalle à l'animation.",
   "SnappedLayer": "Étendue temporelle et intervalle appliqués à l'animation.",
   "SocialWeatherHashtags": "meteo,donneesouvertes",
