Basemaps working (temporarily removed overlays) with projections and permalink

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -79,7 +79,7 @@
   "MP4ExportTitle": "Visualize & export",
   "MSCAnimet": "MSC AniMet",
   "MSCAnimetEmail": "Weather animation made with MSC AniMet",
-  "NoBasemap": "No basemap",
+  "NoBasemap": "Background color",
   "NoData": "No data available here",
   "NotFound": "404 Not Found",
   "NotFoundSub": "The page you are looking for does not exist.",
@@ -115,6 +115,7 @@
   "UserDoc": "User documentation",
   "Value": "Value",
   "VideoFormat": "Resolution",
+  "Water": "Water",
   "Water_bodies": "Canadian water bodies",
   "Weather": "GeoMet-Weather",
   "WeatherNightly": "GeoMet-Weather Nightly",
