--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -79,7 +79,7 @@
   "MP4ExportTitle": "Visualiser et exporter",
   "MSCAnimet": "AniMet du SMC",
   "MSCAnimetEmail": "Animation météo créée à partir d'AniMet du SMC",
-  "NoBasemap": "Aucun fond",
+  "NoBasemap": "Couleur de fond",
   "NoData": "Aucune donnée disponible ici",
   "NotFound": "Erreur 404",
   "NotFoundSub": "La page que vous recherchez est introuvable.",
@@ -115,6 +115,7 @@
   "UserDoc": "Documentation usager",
   "Value": "Valeur",
   "VideoFormat": "Résolution",
+  "Water": "Eau",
   "Water_bodies": "Délimitations des plans d'eau canadiens",
   "Weather": "GeoMet-Météo",
   "WeatherNightly": "GeoMet-Météo Nightly",
