Finished overlays and basemaps implementation

--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -13,7 +13,7 @@
   "AttributionOSM": "Carte par © OpenStreetMap",
   "Base": "Originale",
   "Black": "Noire",
-  "Boundaries": "Frontières géopolitiques canadiennes",
+  "Boundaries": "Frontières",
   "BrokenLayer": "La couche ne peut présentement pas être chargée.",
   "Climate": "GeoMet-Climat",
   "ClimateNightly": "GeoMet-Climat Nightly",
@@ -32,6 +32,7 @@
   "EPSG4326": "WGS84 (lat/lon)",
   "ExpiredTimesteps": "Certains pas de temps ont expiré. Les informations temporelles ont été mises à jour.",
   "ExtentFullyOOB": "La plage complète des dates sélectionnées n'est plus disponible. La plage des dates sélectionnées a été réinitialisée.",
+  "Fill": "Remplissage",
   "FPS": "IPS",
   "FramesPerSecond": "Images par seconde",
   "GeoMetSearchLabel": "Chercher les couches {wmsSource}",
@@ -89,6 +90,7 @@
   "OtherProperties": "Propriétés",
   "OutputFormat": "Format de sortie",
   "Overlay": "Superpositions",
+  "Places": "Lieux",
   "Portrait": "Portrait",
   "Presets": "Pré-construites",
   "ResetRotation": "Réinitialiser la rotation",
