--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -13,7 +13,7 @@
   "AttributionOSM": "Map by ©OpenStreetMap",
   "Base": "Base",
   "Black": "Black",
-  "Boundaries": "Canadian geopolitical boundaries",
+  "Boundaries": "Boundaries",
   "BrokenLayer": "Currently unable to load layer.",
   "Climate": "GeoMet-Climate",
   "ClimateNightly": "GeoMet-Climate Nightly",
@@ -32,6 +32,7 @@
   "EPSG4326": "WGS84 (lat/lon)",
   "ExpiredTimesteps": "Some timesteps have expired. The temporal values have been updated.",
   "ExtentFullyOOB": "The entire selected temporal extent is no longer available. The date range slider has been reset.",
+  "Fill": "Fill",
   "FPS": "FPS",
   "FramesPerSecond": "Frames per second",
   "GeoMetSearchLabel": "Search {wmsSource} layers",
@@ -89,6 +90,7 @@
   "OtherProperties": "Properties",
   "OutputFormat": "Output format",
   "Overlay": "Overlays",
+  "Places": "Places",
   "Portrait": "Portrait",
   "Presets": "Presets",
   "ResetRotation": "Reset rotation",
