--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -25,6 +25,7 @@
   "Dark": "Dark",
   "DisplayLegend": "Display legend",
   "DocumentationURL": "https://eccc-msc.github.io/open-data/msc-animet/readme_en/",
+  "ECMWF": "ECMWF - ecCharts",
   "ElementsOutOfFrame": "Legends and text boxes must be placed inside the frame to appear in the output animation.",
   "EPSG3857": "Web Mercator",
   "EPSG3978": "Lambert Conic Conformal",
@@ -76,14 +77,16 @@
   "MP4ExportDownload": "Download as MP4",
   "MP4ExportSubtitle": "Preview the created animation and download using the button below",
   "MP4ExportTitle": "Visualize & export",
+  "MRNFTerritories": "QC MRNF - Territory",
   "MSCAnimet": "MSC AniMet",
   "MSCAnimetEmail": "Weather animation made with MSC AniMet",
+  "NASA": "NASA - Earthdata",
   "NoBasemap": "Background color",
   "NoData": "No data available here",
   "NotFound": "404 Not Found",
   "NotFoundSub": "The page you are looking for does not exist.",
   "NoTimeTooltip": "Layer has no temporal dimension",
-  "NRCan": "Natural Resources Canada",
+  "NRCan": "NRCan - CanVec",
   "OSM": "OpenStreetMap",
   "OtherProperties": "Properties",
   "OutputFormat": "Output format",
