--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -25,6 +25,7 @@
   "Dark": "Sombre",
   "DisplayLegend": "Afficher la légende",
   "DocumentationURL": "https://eccc-msc.github.io/open-data/msc-animet/readme_fr/",
+  "ECMWF": "ECMWF - ecCharts",
   "ElementsOutOfFrame": "Les légendes et boites de texte doivent être placées dans le cadre pour apparaitre dans l'animation.",
   "EPSG3857": "Web Mercator",
   "EPSG3978": "Lambert Conique Conforme",
@@ -78,19 +79,20 @@
   "MP4ExportTitle": "Visualiser et exporter",
   "MSCAnimet": "AniMet du SMC",
   "MSCAnimetEmail": "Animation météo créée à partir d'AniMet du SMC",
+  "NASA": "NASA - Earthdata",
   "NoBasemap": "Couleur de fond",
   "NoData": "Aucune donnée disponible ici",
   "NotFound": "Erreur 404",
   "NotFoundSub": "La page que vous recherchez est introuvable.",
   "NoTimeTooltip": "La couche ne possède pas de dimension temporelle",
-  "NRCan": "Ressources naturelles Canada",
+  "NRCan": "NRCan - CanVec",
   "OSM": "OpenStreetMap",
   "OtherProperties": "Propriétés",
   "OutputFormat": "Format de sortie",
   "Overlay": "Superpositions",
   "Places": "Lieux",
   "Portrait": "Portrait",
-  "Presets": "Pré-construites",
+  "Presets": "Préréglages",
   "ResetRotation": "Réinitialiser la rotation",
   "RevertColor": "Remettre la couleur originale",
   "RevertTimeZone": "Remettre le fuseau de votre navigateur",
@@ -99,6 +101,7 @@
   "SearchTZ": "Rechercher fuseau horaire",
   "SelectCRS": "Sélectionner la projection",
   "SelectMR": "Sélectionner la passe de modèle",
+  "MRNFTerritories": "QC MRNF - Territoire",
   "ServiceRestored": "Service rétabli, reprise...",
   "Share": "Partager",
   "ShowGraticules": "Montrer les graticules",
