added dev and stage to conf
tmp fix for building

dsiaply to True

backed docker change

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -17,6 +17,8 @@
   "BrokenLayer": "Currently unable to load layer.",
   "Climate": "GeoMet-Climate",
   "ClimateNightly": "GeoMet-Climate Nightly",
+  "ClimateDev": "GeoMet-Climate Dev",
+  "ClimateStage": "GeoMet-Climate Stage",
   "Close": "Close",
   "CMD_WMS": "CMD-WMS",
   "Colon": ":",
@@ -123,6 +125,8 @@
   "Water_bodies": "Canadian water bodies",
   "Weather": "GeoMet-Weather",
   "WeatherNightly": "GeoMet-Weather Nightly",
+  "WeatherDev": "GeoMet-Weather Dev",
+  "WeatherStage": "GeoMet-Weather Stage",
   "White": "White",
   "Widescreen": "Widescreen",
   "WmsSourceTitle": "Add {wmsSource} layers",
