New parameter for similar WMS sources and Valid time tooltip

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -119,6 +119,7 @@
   "UltraWideScreen": "Ultra-widescreen",
   "UnhandledError": "An unhandled error was encountered. The layer had to be removed.",
   "UserDoc": "User documentation",
+  "Valid": "Valid time",
   "Value": "Value",
   "VideoFormat": "Resolution",
   "Water": "Water",
