--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -117,6 +117,7 @@
   "UltraWideScreen": "Ultra-large",
   "UnhandledError": "Une erreur non répertoriée a été rencontrée. La couche a dû être retirée.",
   "UserDoc": "Documentation usager",
+  "Valid": "Heure valide",
   "Value": "Valeur",
   "VideoFormat": "Résolution",
   "Water": "Eau",
