Fixed bug with Presets not specifying the source and some translation changes

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -16,8 +16,8 @@
   "Boundaries": "Boundaries",
   "BrokenLayer": "Currently unable to load layer.",
   "Climate": "GeoMet-Climate",
-  "ClimateNightly": "GeoMet-Climate Nightly",
   "ClimateDev": "GeoMet-Climate Dev",
+  "ClimateNightly": "GeoMet-Climate Nightly",
   "ClimateStage": "GeoMet-Climate Stage",
   "Close": "Close",
   "CMD_WMS": "CMD-WMS",
@@ -95,7 +95,7 @@
   "Overlay": "Overlays",
   "Places": "Places",
   "Portrait": "Portrait",
-  "Presets": "Presets",
+  "Presets": "Add preset",
   "ResetRotation": "Reset rotation",
   "RevertColor": "Revert to original color",
   "RevertTimeZone": "Revert to your browser's time zone",
@@ -125,8 +125,8 @@
   "Water": "Water",
   "Water_bodies": "Canadian water bodies",
   "Weather": "GeoMet-Weather",
-  "WeatherNightly": "GeoMet-Weather Nightly",
   "WeatherDev": "GeoMet-Weather Dev",
+  "WeatherNightly": "GeoMet-Weather Nightly",
   "WeatherStage": "GeoMet-Weather Stage",
   "White": "White",
   "Widescreen": "Widescreen",
