--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -16,7 +16,9 @@
   "Boundaries": "Frontières",
   "BrokenLayer": "La couche ne peut présentement pas être chargée.",
   "Climate": "GeoMet-Climat",
+  "ClimateDev": "GeoMet-Climat Dev",
   "ClimateNightly": "GeoMet-Climat Nightly",
+  "ClimateStage": "GeoMet-Climat Stage",
   "Close": "Fermer",
   "CMD_WMS": "CMD-WMS",
   "Colon": " :",
@@ -92,7 +94,7 @@
   "Overlay": "Superpositions",
   "Places": "Lieux",
   "Portrait": "Portrait",
-  "Presets": "Préréglages",
+  "Presets": "Ajouter un préréglage",
   "ResetRotation": "Réinitialiser la rotation",
   "RevertColor": "Remettre la couleur originale",
   "RevertTimeZone": "Remettre le fuseau de votre navigateur",
@@ -123,7 +125,9 @@
   "Water": "Eau",
   "Water_bodies": "Délimitations des plans d'eau canadiens",
   "Weather": "GeoMet-Météo",
+  "WeatherDev": "GeoMet-Météo Dev",
   "WeatherNightly": "GeoMet-Météo Nightly",
+  "WeatherStage": "GeoMet-Météo Stage",
   "White": "Blanche",
   "Widescreen": "Large",
   "WmsSourceTitle": "Ajouter des couches {wmsSource}",
