Fixed translation of Presets

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -3,6 +3,7 @@
   "AddBox": "Rectangle",
   "AddCircle": "Circle",
   "AddPolygon": "Polygon",
+  "AddPreset": "Add preset",
   "AddTextbox": "Textbox",
   "AnimationFrom": "Weather animation from",
   "AppBarCreate": "Animation configuration",
@@ -95,7 +96,7 @@
   "Overlay": "Overlays",
   "Places": "Places",
   "Portrait": "Portrait",
-  "Presets": "Add preset",
+  "Presets": "Presets",
   "ResetRotation": "Reset rotation",
   "RevertColor": "Revert to original color",
   "RevertTimeZone": "Revert to your browser's time zone",
