--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -3,6 +3,7 @@
   "AddBox": "Rectangle",
   "AddCircle": "Cercle",
   "AddPolygon": "Polygone",
+  "AddPreset": "Ajouter un préréglage",
   "AddTextbox": "Boite de texte",
   "AnimationFrom": "Animation météo de",
   "AppBarCreate": "Configuration",
@@ -94,7 +95,7 @@
   "Overlay": "Superpositions",
   "Places": "Lieux",
   "Portrait": "Portrait",
-  "Presets": "Ajouter un préréglage",
+  "Presets": "Préréglages",
   "ResetRotation": "Réinitialiser la rotation",
   "RevertColor": "Remettre la couleur originale",
   "RevertTimeZone": "Remettre le fuseau de votre navigateur",
