Bugfixes, permalink enhancement and play speed dropdown

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -95,6 +95,9 @@
   "OutputFormat": "Output format",
   "Overlay": "Overlays",
   "Places": "Places",
+  "PlaySpeed": "Play speed",
+  "PlaySpeedLabel": "{speed} per second",
+  "PlaySpeedTooltip": "Actual speed may be slower if images take longer to load",
   "Portrait": "Portrait",
   "Presets": "Presets",
   "ResetRotation": "Reset rotation",
