--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -94,6 +94,9 @@
   "OutputFormat": "Format de sortie",
   "Overlay": "Superpositions",
   "Places": "Lieux",
+  "PlaySpeed": "Vitesse de lecture",
+  "PlaySpeedLabel": "{speed} par seconde",
+  "PlaySpeedTooltip": "La vitesse réelle peut être plus lente si les images prennent plus de temps à charger",
   "Portrait": "Portrait",
   "Presets": "Préréglages",
   "ResetRotation": "Réinitialiser la rotation",
