Added possibility for multiple urls for a single source and added 2 sources

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -80,7 +80,6 @@
   "MP4ExportDownload": "Download as MP4",
   "MP4ExportSubtitle": "Preview the created animation and download using the button below",
   "MP4ExportTitle": "Visualize & export",
-  "MRNFTerritories": "QC MRNF - Territory",
   "MSCAnimet": "MSC AniMet",
   "MSCAnimetEmail": "Weather animation made with MSC AniMet",
   "NASA": "NASA - Earthdata",
@@ -92,6 +91,7 @@
   "NRCan": "NRCan - CanVec",
   "OSM": "OpenStreetMap",
   "OtherProperties": "Properties",
+  "Others": "Others",
   "OutputFormat": "Output format",
   "Overlay": "Overlays",
   "Places": "Places",
