--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -91,6 +91,7 @@
   "NRCan": "NRCan - CanVec",
   "OSM": "OpenStreetMap",
   "OtherProperties": "Propriétés",
+  "Others": "Autres",
   "OutputFormat": "Format de sortie",
   "Overlay": "Superpositions",
   "Places": "Lieux",
@@ -106,7 +107,6 @@
   "SearchTZ": "Rechercher fuseau horaire",
   "SelectCRS": "Sélectionner la projection",
   "SelectMR": "Sélectionner la passe de modèle",
-  "MRNFTerritories": "QC MRNF - Territoire",
   "ServiceRestored": "Service rétabli, reprise...",
   "Share": "Partager",
   "ShowGraticules": "Montrer les graticules",
