Changed animate tab to export tab

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -76,7 +76,7 @@
   "MP4CreateDarkMode": "Dark mode",
   "MP4CreateLightMode": "Light mode",
   "MP4CreateNotifyCancelAnimation": "The animation creation has been cancelled given your browser window has been resized",
-  "MP4CreateTitle": "Animate",
+  "MP4CreateTitle": "Export",
   "MP4ExportDownload": "Download as MP4",
   "MP4ExportSubtitle": "Preview the created animation and download using the button below",
   "MP4ExportTitle": "Visualize & export",
