--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -76,7 +76,7 @@
   "MP4CreateDarkMode": "Mode foncé",
   "MP4CreateLightMode": "Mode clair",
   "MP4CreateNotifyCancelAnimation": "La création de l'animation a été annulée car la fenêtre de votre navigateur a été redimensionnée.",
-  "MP4CreateTitle": "Animer",
+  "MP4CreateTitle": "Exporter",
   "MP4ExportDownload": "Télécharger au format MP4",
   "MP4ExportSubtitle": "Prévisualiser l'animation créée et télécharger à l'aide du bouton ci-dessous",
   "MP4ExportTitle": "Visualiser et exporter",
