--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -98,6 +98,7 @@
   "PlaySpeed": "Vitesse de lecture",
   "PlaySpeedTooltip": "La vitesse réelle peut être plus lente si les images prennent plus de temps à charger",
   "Portrait": "Portrait",
+  "PortraitSmall": "Portrait",
   "Presets": "Préréglages",
   "ResetRotation": "Réinitialiser la rotation",
   "RevertColor": "Remettre la couleur originale",
