Added new NRCan basemap and bugfixes

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -16,6 +16,7 @@
   "Black": "Black",
   "Boundaries": "Boundaries",
   "BrokenLayer": "Currently unable to load layer.",
+  "CBMT": "CBMT",
   "Climate": "GeoMet-Climate",
   "ClimateDev": "GeoMet-Climate Dev",
   "ClimateNightly": "GeoMet-Climate Nightly",
@@ -25,6 +26,7 @@
   "Colon": ":",
   "ColorBorder": "Legends with coloured borders",
   "ControllerOptions": "Playback options",
+  "CrsBasemapMismatch": "Selected basemap {basemap} does not support the chosen projection ({projection}). Reset to OSM.",
   "Dark": "Dark",
   "DisplayLegend": "Display legend",
   "DocumentationURL": "https://eccc-msc.github.io/open-data/msc-animet/readme_en/",
