--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -16,6 +16,7 @@
   "Black": "Noire",
   "Boundaries": "Frontières",
   "BrokenLayer": "La couche ne peut présentement pas être chargée.",
+  "CBMT": "CBCT",
   "Climate": "GeoMet-Climat",
   "ClimateDev": "GeoMet-Climat Dev",
   "ClimateNightly": "GeoMet-Climat Nightly",
@@ -25,6 +26,7 @@
   "Colon": " :",
   "ColorBorder": "Bordure des légendes en couleur",
   "ControllerOptions": "Options de lecture",
+  "CrsBasemapMismatch": "La carte de base sélectionnée {basemap} ne supporte pas la projection choisie ({projection}). Réinitialisation à OSM.",
   "Dark": "Sombre",
   "DisplayLegend": "Afficher la légende",
   "DocumentationURL": "https://eccc-msc.github.io/open-data/msc-animet/readme_fr/",
