Interpolation icon added and CBMT text fixes

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -16,7 +16,7 @@
   "Black": "Black",
   "Boundaries": "Boundaries",
   "BrokenLayer": "Currently unable to load layer.",
-  "CBMT": "CBMT",
+  "CBMT": "NRCan CBMT",
   "Climate": "GeoMet-Climate",
   "ClimateDev": "GeoMet-Climate Dev",
   "ClimateNightly": "GeoMet-Climate Nightly",
@@ -26,7 +26,7 @@
   "Colon": ":",
   "ColorBorder": "Legends with coloured borders",
   "ControllerOptions": "Playback options",
-  "CrsBasemapMismatch": "Selected basemap {basemap} does not support the chosen projection ({projection}). Reset to OSM.",
+  "CrsBasemapMismatch": "The selected basemap ({basemap}) is not compatible with projection {projection}. Resetting to OpenStreetMap.",
   "Dark": "Dark",
   "DisplayLegend": "Display legend",
   "DocumentationURL": "https://eccc-msc.github.io/open-data/msc-animet/readme_en/",
@@ -43,6 +43,7 @@
   "FramesPerSecond": "Frames per second",
   "GoToHomePage": "Go to MSC AniMet home page",
   "Grey": "Grey",
+  "InterpolationError": "Interpolation failed, functionality has been disabled on this layer.",
   "InvalidSRS": "CRS {CRS} is invalid for this data source.",
   "JPEGCreateButtonLabel": "Create image",
   "JPEGExportDownload": "Download as JPEG",
@@ -50,6 +51,7 @@
   "LayerBarClosestTime": "Closest time: ",
   "LayerBarCurrentTooltip": "Current",
   "LayerBarEndsTooltip": "End",
+  "LayerBarInterpolateTooltip": "Interpolation",
   "LayerBarInvisibleTooltip": "Closest date out of bounds. Layer not shown.",
   "LayerBarMapTime": "Current map time: ",
   "LayerBarMissingTimestep": "The current map time is in-between this layer's available timesteps.",
