--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -16,7 +16,7 @@
   "Black": "Noire",
   "Boundaries": "Frontières",
   "BrokenLayer": "La couche ne peut présentement pas être chargée.",
-  "CBMT": "CBCT",
+  "CBMT": "RNCan CBCT",
   "Climate": "GeoMet-Climat",
   "ClimateDev": "GeoMet-Climat Dev",
   "ClimateNightly": "GeoMet-Climat Nightly",
@@ -26,7 +26,7 @@
   "Colon": " :",
   "ColorBorder": "Bordure des légendes en couleur",
   "ControllerOptions": "Options de lecture",
-  "CrsBasemapMismatch": "La carte de base sélectionnée {basemap} ne supporte pas la projection choisie ({projection}). Réinitialisation à OSM.",
+  "CrsBasemapMismatch": "La carte de base sélectionnée ({basemap}) n'est pas compatible avec la projection {projection}. Réinitialisation à OpenStreetMap.",
   "Dark": "Sombre",
   "DisplayLegend": "Afficher la légende",
   "DocumentationURL": "https://eccc-msc.github.io/open-data/msc-animet/readme_fr/",
@@ -43,6 +43,7 @@
   "FramesPerSecond": "Images par seconde",
   "GoToHomePage": "Aller à la page d'accueil AniMet du SMC",
   "Grey": "Grise",
+  "InterpolationError": "L'interpolation a échoué, la fonctionalité a été désactivée pour cette couche.",
   "InvalidSRS": "Le SRC {CRS} n'est pas valide pour cette source de données.",
   "JPEGCreateButtonLabel": "Créer l'image",
   "JPEGExportDownload": "Télécharger au format JPEG",
@@ -50,6 +51,7 @@
   "LayerBarClosestTime": "Date la plus proche: ",
   "LayerBarCurrentTooltip": "Actuel",
   "LayerBarEndsTooltip": "Fin",
+  "LayerBarInterpolateTooltip": "Interpolation",
   "LayerBarInvisibleTooltip": "Date la plus proche hors limites. Couche non-visible.",
   "LayerBarMapTime": "Date de la carte: ",
   "LayerBarMissingTimestep": "La date de la carte se situe entre deux pas de temps disponibles de la couche.",
